--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
     "streamifier": "^0.1.1",
     "uuid": "^13.0.0"
   },
