--- a/front/.env.example
+++ b/front/.env.example
@@ -1,2 +1,3 @@
-# URL de l'API backend
-NEXT_PUBLIC_API_URL=http://localhost:5000/api
+# # URL de l'API backend
+NEXT_PUBLIC_API_URL=https://ton-backend.onrender.com/api
+# NEXT_PUBLIC_API_URL=http://localhost:5000/api
