--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,15 @@
 # Configuration de la base de données PostgreSQL
-DB_HOST=localhost
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_USER=postgres
+# DB_PASSWORD=votre_mot_de_passe
+# DB_NAME=schema
+DB_HOST=dpg-d4gm93pr0fns739ncj9g-a.frankfurt-postgres.render.com
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=votre_mot_de_passe
-DB_NAME=schema
-
+DB_USER=admin
+DB_PASS=XaJtfgqUgHTD9j9v5yTj3t6HIH4mkwkI   # remplace avec ton mot de passe
+DB_NAME=espacestage
+DB_SSL=true
 # Configuration JWT
 JWT_SECRET=votre_secret_jwt_tres_securise_changez_moi_en_production
 JWT_EXPIRES_IN=7d
