--- a/front/package.json
+++ b/front/package.json
@@ -52,6 +52,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "or": "^0.2.0",
     "papaparse": "^5.5.3",
