--- a/front/package.json
+++ b/front/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/chart.js": "^4.0.1",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "axios": "^1.12.2",
@@ -49,7 +50,6 @@
     "geist": "latest",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
-    "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
@@ -57,13 +57,14 @@
     "or": "^0.2.0",
     "papaparse": "^5.5.3",
     "react": "^19",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
     "react-is": "^19.2.0",
     "react-pdf": "^10.2.0",
     "react-resizable-panels": "^2.1.7",
+    "react-to-pdf": "^2.0.3",
     "react-toastify": "^11.0.5",
     "recharts": "^3.3.0",
     "sonner": "^1.7.4",
